--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="https://dataupdate.pages.dev" class="left">链接1,请点击此观看演示视频</a>
+  <a href="https://homytree.github.io/dataupdates" class="left">链接1,请点击此观看演示视频</a>
 </div>
 <div class="navbar">
-  <a href="https://formatset.pages.dev" class="left">链接2,请点击此观看演示视频</a>
+  <a href="https://homytree.github.io/formatset" class="left">链接2,请点击此观看演示视频</a>
 </div>
 
 
